--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src="Resources/Images/DarklingSmall.png" width="32" height="32">
         </div>
         <div id="navbar-item">
-            <a id="navbar-item-image" href="#skills">
+            <a id="navbar-item-image" href="#controls">
                 <li><img src="Resources/Images/SkillsIcon.svg" width="32" height="32"
                         onmouseover="this.src='Resources/Images/SkillsIconHover.svg'"
                         onmouseout="this.src='Resources/Images/SkillsIcon.svg'"></li>
@@ -44,7 +44,7 @@
     </div>
 </div>
 <!-- Skills -->
-<div id="skills">
+<div id="controls">
     <div id="about-inner">
         <div id="about-top">
             <img src="Resources/Images/SkillsIconHover.svg" width="48" height="48">
