--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <div id="navbar">
     <div id="inner-navbar">
         <div id="inner-navbar-top">
-            <img src="Resources/Images/DarklingSmall.png" width="32" height="32">
+            <a id="navbar-item-image" href="https://gamejolt.com/games/darklings/640842" target="_blank">
+                <li><img src="Resources/Images/DarklingSmall.png" width="32" height="32"></li>
+            </a>
         </div>
         <div id="navbar-item">
             <a id="navbar-item-image" href="#controls">
