--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
             <div id="skills-bottom-table">
                 <div id="skills-bottom-row">
                     <label class="skills-main-label">Moveset</label>
+                    <label class="skills-sub-label">Pause</label>
+                    <label class="skills-sub-label">Reset</label>
                     <label class="skills-sub-label">Movement</label>
                     <label class="skills-sub-label">Jump</label>
                     <label class="skills-sub-label">Crouch</label>
@@ -69,6 +71,8 @@
                 </div>
                 <div id="buttons-bottom-row">
                     <label class="skills-main-label">Keyboard</label>
+                    <label class="skills-sub-label">Tab</label>
+                    <label class="skills-sub-label">1</label>
                     <label class="skills-sub-label">WASD</label>
                     <label class="skills-sub-label">W</label>
                     <label class="skills-sub-label">S</label>
@@ -82,6 +86,8 @@
                 </div>
                 <div id="buttons-bottom-row">
                     <label class="skills-main-label">Controller</label>
+                    <label class="skills-sub-label">Start</label>
+                    <label class="skills-sub-label">Select</label>
                     <label class="skills-sub-label">Dpad</label>
                     <label class="skills-sub-label">Dpad Up</label>
                     <label class="skills-sub-label">Dpad Down</label>
@@ -95,6 +101,8 @@
                 </div>
                 <div id="buttons-bottom-row">
                     <label class="skills-main-label">Keyboard-1</label>
+                    <label class="skills-sub-label">Tab</label>
+                    <label class="skills-sub-label">1</label>
                     <label class="skills-sub-label">WASD</label>
                     <label class="skills-sub-label">W</label>
                     <label class="skills-sub-label">S</label>
@@ -108,6 +116,8 @@
                 </div>
                 <div id="buttons-bottom-row">
                     <label class="skills-main-label">Keyboard-2</label>
+                    <label class="skills-sub-label">Tab</label>
+                    <label class="skills-sub-label">1</label>
                     <label class="skills-sub-label">IJKL</label>
                     <label class="skills-sub-label">I</label>
                     <label class="skills-sub-label">K</label>
