Minor update for inputs.

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                     <label class="skills-sub-label">Crouch Attack</label>
                     <label class="skills-sub-label">Jump Attack</label>
                     <label class="skills-sub-label">Arcana</label>
+                    <label class="skills-sub-label">Assist</label>
                 </div>
                 <div id="buttons-bottom-row">
                     <label class="skills-main-label">Keyboard</label>
@@ -83,6 +84,7 @@
                     <label class="skills-sub-label">Down J</label>
                     <label class="skills-sub-label">Up J</label>
                     <label class="skills-sub-label">K</label>
+                    <label class="skills-sub-label">L</label>
                 </div>
                 <div id="buttons-bottom-row">
                     <label class="skills-main-label">Controller</label>
@@ -98,6 +100,7 @@
                     <label class="skills-sub-label">Down X</label>
                     <label class="skills-sub-label">Up X</label>
                     <label class="skills-sub-label">Y</label>
+                    <label class="skills-sub-label">Right Bumper</label>
                 </div>
                 <div id="buttons-bottom-row">
                     <label class="skills-main-label">Keyboard-1</label>
@@ -113,6 +116,7 @@
                     <label class="skills-sub-label">Down E</label>
                     <label class="skills-sub-label">Up E</label>
                     <label class="skills-sub-label">R</label>
+                    <label class="skills-sub-label">F</label>
                 </div>
                 <div id="buttons-bottom-row">
                     <label class="skills-main-label">Keyboard-2</label>
@@ -128,6 +132,7 @@
                     <label class="skills-sub-label">Down U</label>
                     <label class="skills-sub-label">Up U</label>
                     <label class="skills-sub-label">Y</label>
+                    <label class="skills-sub-label">H</label>
                 </div>
             </div>
         </div>
